2003-11-01  Alexander Malysh  <a.malysh@centrium.de>
    * doc/userguide/userguide.xml: documentations about deprecated
      'maximum-queue-length' option and new 'sms-incoming-queue-length'.

2003-11-01  Stipe Tolj  <tolj@wapme-systems.de>
    * test/test_[regex|pcre].c: make test programs compile only if gw-config.h
      #defines are set.

2003-10-30  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_boxc.c: applied bb_boxc patch. This patch solve major problems within
      bearerbox<->smsbox routing:
	1) When an smsbox passes an MT message bearerbox will send an ACK for it,
	that is passed to the "global" incoming queue. From this global
	incoming queue all smsboxes are reading. Hence there is no garantee
	that ACKs are delivered to the right smsbox.
	2) smsbox routing doesn't work if bearerbox started after shutdown and 
	messages were stored in store-file. (see bug #83)
        3) mantis #80
	3) shutdown can block for ever if incoming queue is not empty and no smsboxes 
	will connect to bearerbox. Now we have timeout for this (it's hardcoded to 
	10sec).
      This patch split bearerbox incoming queue on per smsbox connection basis and 
      makes smsbox routing more restrictive.
      In order to reflect new smsbox connections behavior, new incoming queuing policy
      was introduced. Incoming queue is now per smsbox connection and only if no appropriate
      smsbox connection was found (e.g. smsbox routing is set but smsbox is gone), messages
      will be queued within global incoming queue.
      And as a bonus, allows clean shutdown on cygwin.
    * gw/bb_smscconn.c, gw/bearerbox.c, gwlib/cfg.def: new config option
      'sms-incoming-queue-length' instead of the old 'maximum-queue-length'. Old
      option still supported but marked as deprecated.

2003-10-30  Stipe Tolj  <tolj@wapme-systems.de>
    * configure[.in]: added Perl compatible regular expression (PCRE) library
      support via --enable-pcre configure option. 