@@ -1,10 +1,13 @@
+2003-11-01  Stipe Tolj  <tolj@wapme-systems.de>
+	* wap/cookies.c: fixed annoying compiler warning
+
 2003-11-01  Alexander Malysh  <a.malysh@centrium.de>
     * doc/userguide/userguide.xml: documentations about deprecated
       'maximum-queue-length' option and new 'sms-incoming-queue-length'.
 
 2003-11-01  Stipe Tolj  <tolj@wapme-systems.de>
-    * test/test_[regex|pcre].c: make test programs compile only if gw-config.h
-      #defines are set.
+	* test/test_[regex|pcre].c: make test programs compile only if gw-config.h
+	  #defines are set.
 
 2003-10-30  Alexander Malysh  <a.malysh@centrium.de>
     * gw/bb_boxc.c: applied bb_boxc patch. This patch solve major problems within
